@@ -10,9 +10,14 @@ icon:plus[] Core: The OrientDB graph database will be updated to version 3.0
 [[v0.16.1]]
 == 0.16.1 (TBD)
 
+icon:plus[] Clustering: Gentics Mesh is now able to form cluster between different server versions. 
+			A database revision hash will now be used to determine which versions of Gentics Mesh can form a cluster.
+			Only instances with the same database revision hash are allowed to form a cluster.
+			The current revision hash info is included in the `/api/v1` endpoint response.
+
 icon:check[] Elasticsearch: Fixed handling of `search.url` settings which contained https URLs.
 
-icon:check[] Core: Fixed deletion of mesh.token cookie on logout.
+icon:check[] REST: The `/api/v1/auth/logout` endpoint will now correctly delete the `mesh.token` cookie.
 
 [[v0.16.0]]
 == 0.16.0 (07.02.2018)
